Implement test class for TwoSum

--- a/force-app/main/default/classes/TwoSumTest.cls
+++ b/force-app/main/default/classes/TwoSumTest.cls
@@ -4,6 +4,15 @@ private class TwoSumTest {
 
     @isTest
     static void myUnitTest() {
-        // TO DO: implement unit test
+        List<Integer> integerList = new List<Integer>{1, 2, 3, 4};
+        Integer targetInteger = 4;
+
+        Test.startTest();
+        List<Integer> indices = TwoSum.runSolution(integerList, targetInteger);
+        Test.stopTest();
+
+        Assert.areEqual(2, indices.size());
+        Assert.isTrue(indices.contains(0));
+        Assert.isTrue(indices.contains(2));
     }
 }
